--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 certifi==2019.3.9
 chardet==3.0.4
+Click==7.0
 dateparser==0.7.1
+Flask==1.0.2
 idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
 python-dateutil==2.8.0
 pytz==2019.1
 regex==2019.4.14
@@ -10,3 +15,4 @@ six==1.12.0
 spotipy==2.4.4
 tzlocal==1.5.1
 urllib3==1.24.1
+Werkzeug==0.15.4
